--- a/bait/style.css
+++ b/bait/style.css
@@ -9,52 +9,50 @@ ul {
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-}
-.container{
-    /* background-color: burlywood; */
-    display: flex;
-    height: 100vh;
+    /* background-color: khaki; */
+    /* display: flex;
+    flex-direction: row;
+    justify-content: center; */
     width: 100vw;
-    flex-direction: column;
-    /* align-items: center; */
-justify-content: center;
+    height: 100vh;
 }
+
+.containe {
+    display: flex;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+}
+
 .content {
-    width: 70%;
-    /* background-color: blue; */
+    background: url(../image/anhweb.jpg) no-repeat;
+    width: 100%;
+    height: 300px;
     display: flex;
     flex-direction: row;
-    align-self: center;
+    align-items: center;
+    background-size: 100%;
+    justify-content: center;
 }
 
-.content .content1 {
-    width: 25%;
-    margin-right: 70px;
+.content li {
+    display: inline-block;
+   text-align: center;
+   margin-right: 90px;
+   line-height: 35px;
+   color: rgb(254,254,254);
+   text-transform: capitalize;
 
 }
 
-.content .content1 h3 {
-    margin-bottom: 40px;
-    color:rgb(76, 76, 76); 
-    font-weight: normal;
+.content ul {
+    width: 900px;
+    display: flex;
 }
 
-.content .content1 p {
-    color:rgb(76, 76, 76); 
-    word-spacing: 2px;
-    margin-bottom: 20px;
-    line-height: 30px;
-    letter-spacing: 1px;
+.content li .icon img {
+    width: 50px;
 }
-.container .content .content1 li{
-    color:rgb(76, 76, 76); 
-    line-height:30px ;
-    word-spacing: 4px;
-    letter-spacing: 1px;
-}
-.container .content .content1 a{
-    text-decoration: none;
-    line-height: 30px;
-    word-spacing: 4px;
-    color:rgb(76, 76, 76);  ;
+.containe .content li .lst{
+    font-size: 40px;
 }
